fixed spacing site almost done

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ body {
 
 /* photo gal */
 div.gallery {
-  margin: 5px;
+  margin: 2% 4%;
   border: 1px solid #ccc;
   float: left;
   width: 180px;
@@ -216,19 +216,11 @@ div.desc {
     text-align: center;  
     }
 
-    #gallery{
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-evenly;
-      margin-left: 30%;
-      margin-right:30%;
-    }
-      
-    .about-me{
+    .about{
       text-align: center;
-      margin-top: 30%;
       margin-left: 30%;
       margin-right:30%;
+      padding: 2%;
     }
 
   /* Bottom Page Nav */
@@ -261,4 +253,23 @@ div.desc {
 
   }
 
+  }
+
+    .responsive {
+      padding: 0 6px;
+      float: left;
+      width: 24.99999%;
+    }
+    
+    @media only screen and (max-width: 700px){
+      .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+      }
+    }
+    
+    @media only screen and (max-width: 500px){
+      .responsive {
+        width: 100%;
+      }
     }
